fixed registration + added bcrypt encription
