# back/src/dto/authentication.dto.ts
@@ -4,6 +4,11 @@ export interface AuthenticationInputDTO {
   password: string;
 }
 
+export interface RegistrationInputDTO {
+  username: string;
+  password: string;
+}
+
 export interface AuthenticationOutputDTO {
   message: string;
   token?: string;
